# CMake_Analyzer_For_Vcpkg

./: CMakeLists.txt  README.md  install_var.cmd  main.py  options.py
testInTest/: CMakeLists.txt
